tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_rounding_fail_on_struct/execute__tests__compile_failure-72.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Expected type W<3>, found type W<2>
   ┌─ src/main.nr:13:27
   │
13 │             let _: W<3> = foo(w_3, w_2);
   │                           -------------
   │

Aborting due to 1 previous error
