tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_rounding_fail_on_struct/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type W<3>, found type W<2>
   ┌─ src/main.nr:13:27
   │
13 │             let _: W<3> = foo(w_3, w_2);
   │                           -------------
   │

Aborting due to 1 previous error
